# EV_Sales_Prediction

./: .ssh.pub  EV_analysis.ipynb  INSIGHTS_AND_RECOMMENDATIONS.md  LICENSE  advanced_analysis.py  dashboard.py  main.py  model.py  pyproject.toml  requirements.txt
data/: sales.csv
