[project]
name = "ev-sales-forecasting"
version = "0.1.0"
description = "This Project aims to forecast the next 5 years of EV sales using a hybrid approach i.e combine ARIMA and RandomForestRegressor"
readme = "README.md"
requires-python = ">=3.13.5"
dependencies = [
    "ipykernel>=6.29.5",
    "kagglehub>=0.3.12",
    "matplotlib>=3.10.3",
    "nbformat>=5.10.4",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "plotly-express>=0.4.1",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "streamlit>=1.47.1",
]
